--- a/pay.html
+++ b/pay.html
@@ -1,108 +1,139 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Premium VIP • 200 FCFA</title>
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:Arial,sans-serif;background:#000;color:#fff;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:10px}
-.card{background:linear-gradient(135deg,#111,#000);border:2px solid #b8975c;border-radius:16px;max-width:380px;width:100%;padding:24px 20px;text-align:center;box-shadow:0 15px 40px rgba(184,151,92,0.3);position:relative}
-.card::before{content:"";position:absolute;top:0;left:0;right:0;height:4px;background:linear-gradient(90deg,#b8975c,#ffd700,#b8975c);border-radius:16px 16px 0 0}
-h1{font-size:24px;font-weight:800;background:linear-gradient(to right,#ffd700,#b8975c);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:6px}
-.price{font-size:32px;font-weight:bold;color:#ffd700;margin:12px 0 16px;text-shadow:0 0 15px #ffd700}
-.wave{background:rgba(184,151,92,0.2);border:1px solid #b8975c;border-radius:10px;padding:12px;font-size:15px;margin:16px 0}
-.wave strong{color:#ffd700;font-size:17px}
-input{width:100%;padding:12px;margin:8px 0;background:rgba(255,255,255,0.08);border:1px solid #b8975c;border-radius:8px;color:#fff;font-size:15px}
-input::placeholder{color:#aaa}
-input:focus{outline:none;border-color:#ffd700;box-shadow:0 0 8px rgba(255,215,0,0.4)}
-button{width:100%;padding:14px;margin:16px 0 0;background:linear-gradient(#ffd700,#b8975c);color:#000;font-weight:bold;font-size:18px;border:none;border-radius:10px;cursor:pointer;box-shadow:0 5px 15px rgba(255,215,0,0.4);transition:.3s}
-button:hover{transform:translateY(-2px)}
-.code{margin-top:20px;padding-top:18px;border-top:1px dashed #b8975c}
-.code input{text-align:center;letter-spacing:6px;font-weight:bold;font-size:20px;padding:14px;maxlength:15}
-.ok{color:#90ee90;font-weight:bold;font-size:18px}
-.no{color:#ff6b6b;font-weight:bold;font-size:18px}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accès Premium</title>
+    <style>
+        body {font-family: Arial, sans-serif;background:#f0f2f5;display:flex;justify-content:center;padding:20px;}
+        .card {background:white;padding:25px;border-radius:12px;box-shadow:0 5px 20px rgba(0,0,0,0.1);width:100%;max-width:420px;}
+        h2 {text-align:center;color:#333;margin-bottom:20px;}
+        input {width:100%;padding:12px;margin:10px 0;border:1px solid #ddd;border-radius:8px;box-sizing:border-box;font-size:16px;}
+        button {padding:12px;border:none;border-radius:8px;cursor:pointer;font-size:16px;margin:10px 0;}
+        .whatsapp-btn {background:#25D366;color:white;}
+        .whatsapp-btn:hover {background:#128C7E;}
+        .verify-btn {background:#007bff;color:white;}
+        .verify-btn:hover {background:#0056b3;}
+        .success {color:green;font-weight:bold;text-align:center;margin:15px 0;}
+        .error {color:red;text-align:center;margin:15px 0;}
+        .hidden {display:none;}
+        .premium {background:#d4edda;padding:20px;border-radius:8px;text-align:center;margin-top:20px;}
+    </style>
 </head>
 <body>
 
 <div class="card">
-  <h1>ACCÈS PREMIUM</h1>
-  <div class="price">200 FCFA</div>
+    <h2>Accès Premium (9.99€)</h2>
 
-  <div class="wave">
-    Envoie <strong>200 FCFA par Wave</strong><br>au <strong>+225 05 03 58 83 36</strong>
-  </div>
+    <!-- Formulaire + WhatsApp -->
+    <div id="formulaire">
+        <p>Remplissez vos infos puis cliquez sur le bouton :</p>
+        <input type="text" id="nom" placeholder="Nom (ex: Koffi)" required>
+        <input type="text" id="prenom" placeholder="Prénom" required>
+        <input type="text" id="telephone" placeholder="Téléphone (ex: 0778904949)" required>
 
-  <input type="text" id="nom" placeholder="Ton NOM complet (ex: KOFFI)" style="text-transform:uppercase;">
-  <input type="tel" id="whatsapp" placeholder="Ton WhatsApp (ex: 0503588336)">
-  <input type="tel" id="wave" placeholder="Numéro Wave utilisé (très important)">
+        <button class="whatsapp-btn" onclick="envoyerWhatsApp()">
+            Envoyer la demande sur WhatsApp
+        </button>
+        <p style="font-size:14px;color:#555;">Je vous envoie le code après paiement.</p>
+    </div>
 
-  <button onclick="envoyerDemande()">J’ai envoyé 200F → Recevoir mon code</button>
+    <!-- Vérification du code -->
+    <div id="verification" class="hidden">
+        <h3>Entrez votre code d'accès :</h3>
+        <input type="text" id="code" placeholder="Ex: MG-FI949-251114-" autocomplete="off">
+        <button class="verify-btn" onclick="verifier()">Vérifier</button>
+        <div id="resultat"></div>
+    </div>
 
-  <div class="code">
-    <input type="text" id="code" placeholder="MG-XXXX-XXXXXX" maxlength="15" style="letter-spacing:6px;font-size:20px;">
-    <button onclick="verifierCode()" style="background:#ffd700;color:#000;margin-top:8px;padding:12px;">
-      Ouvrir le Premium
-    </button>
-    <div id="resultat"></div>
-  </div>
+    <!-- Contenu Premium -->
+    <div id="premium" class="hidden premium">
+        <h2>Accès Premium Activé !</h2>
+        <p>Tout le contenu premium est débloqué.</p>
+    </div>
 </div>
 
 <script>
-const tonLien = "https://wa.me/2250503588336";
+    // TON VRAI NUMÉRO WHATSAPP (déjà correct)
+    const WHATSAPP_NUMBER = "2250503588336";
 
-function genererCode(nom, waveNum) {
-  const deux = nom.trim().substring(0,2).toUpperCase();
-  const quatre = waveNum.slice(-4);
-  const jour = String(new Date().getDate()).padStart(2,"0");
-  const mois = String(new Date().getMonth()+1).padStart(2,"0");
-  return `MG-\( {deux} \){quatre.slice(-2)}-\( {quatre.slice(0,2)} \){jour}${mois}`;
-}
+    // Si déjà premium → accès direct
+    if (localStorage.getItem('premium') === 'true') {
+        document.getElementById('formulaire').classList.add('hidden');
+        document.getElementById('verification').classList.add('hidden');
+        document.getElementById('premium').classList.remove('hidden');
+    }
 
-function envoyerDemande() {
-  const nom = document.getElementById('nom').value.trim();
-  const whatsappRaw = document.getElementById('whatsapp').value.trim().replace(/[^0-9]/g,'');
-  const waveRaw = document.getElementById('wave').value.trim().replace(/[^0-9]/g,'');
+    function envoyerWhatsApp() {
+        const nom = document.getElementById('nom').value.trim();
+        const prenom = document.getElementById('prenom').value.trim();
+        const tel = document.getElementById('telephone').value.trim();
 
-  if (!nom || !whatsappRaw || !waveRaw || nom.length < 2 || waveRaw.length < 10) {
-    alert("Remplis bien tous les champs !");
-    return;
-  }
+        if (!nom || !prenom || !tel) {
+            alert("Remplissez tous les champs");
+            return;
+        }
 
-  let whatsapp = whatsappRaw;
-  if (whatsapp.startsWith("0")) whatsapp = "225" + whatsapp.substring(1);
-  const lienUser = "https://wa.me/" + whatsapp;
+        const message = encodeURIComponent(`\( {nom} \){prenom} ${tel}`);
+        const url = `https://wa.me/\( {WHATSAPP_NUMBER}?text= \){message}`;
+        window.open(url, '_blank');
 
-  const codeVrai = genererCode(nom, waveRaw);
-  localStorage.setItem('code_attendu', codeVrai);
+        // Passe directement à la vérification du code
+        document.getElementById('formulaire').classList.add('hidden');
+        document.getElementById('verification').classList.remove('hidden');
+    }
 
-  const message = 
-`Paiement 200 FCFA effectué
+    // Liste des codes déjà utilisés (un code = une seule utilisation)
+    function getUsedCodes() {
+        return JSON.parse(localStorage.getItem('usedCodes') || '[]');
+    }
+    function addUsedCode(code) {
+        const used = getUsedCodes();
+        if (!used.includes(code)) used.push(code);
+        localStorage.setItem('usedCodes', JSON.stringify(used));
+    }
 
-Nom : ${nom.toUpperCase()}
-WhatsApp : ${lienUser}
-Numéro Wave : ${waveRaw}
+    // Vérification EXACTE de ta logique
+    function verifier() {
+        const codeSaisi = document.getElementById('code').value.trim().toUpperCase();
+        const resultat = document.getElementById('resultat');
 
-Donne-moi mon code Premium svp`;
+        if (getUsedCodes().includes(codeSaisi)) {
+            resultat.innerHTML = '<p class="error">Ce code a déjà été utilisé !</p>';
+            return;
+        }
 
-  window.open(tonLien + "?text=" + encodeURIComponent(message), '_blank');
-  alert("Message envoyé ! Je te réponds avec ton code en moins de 30 secondes");
-}
+        const regex = /^(MG-|CD-|IVN-)([A-Z]{2})(\d{3})-(\d{6})-$/;
+        const match = codeSaisi.match(regex);
+        if (!match) {
+            resultat.innerHTML = '<p class="error">Code invalide</p>';
+            return;
+        }
 
-function verifierCode() {
-  const saisi = document.getElementById('code').value.trim().toUpperCase();
-  const attendu = localStorage.getItem('code_attendu');
-  const res = document.getElementById('resultat');
+        const deuxLettres = match[2];
+        const troisChiffres = match[3];
 
-  if (saisi === attendu && attendu) {
-    localStorage.setItem('acces_premium', 'oui');
-    res.innerHTML = "<div class='ok'>Accès autorisé ! Bienvenue VIP</div>";
-    setTimeout(() => location.href = "premium.html", 1500);
-  } else {
-    res.innerHTML = "<div class='no'>Code invalide ou déjà utilisé</div>";
-  }
-}
+        const nom = document.getElementById('nom').value.trim().toUpperCase();
+        const tel = document.getElementById('telephone').value.trim();
+
+        const deuxDernieresNom = nom.slice(-2);
+        const troisDerniersTel = tel.slice(-3);
+
+        if (deuxLettres === deuxDernieresNom && troisChiffres === troisDerniersTel) {
+            addUsedCode(codeSaisi);
+            localStorage.setItem('premium', 'true');
+            resultat.innerHTML = '<p class="success">Accès Premium Activé !</p>';
+            setTimeout(() => location.reload(), 1500);
+        } else {
+            resultat.innerHTML = '<p class="error">Code incorrect</p>';
+        }
+    }
+
+    // Valider avec Entrée
+    document.getElementById('code')?.addEventListener('keypress', e => {
+        if (e.key === 'Enter') verifier();
+    });
 </script>
+
 </body>
 </html>
