--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     <span></span>
   </div>
     <!-- [VOS LIENS EXISTANTS RESTENT] -->
-  <a href="premium/premium.html">PREMIUM<a>
+  <a href="premium/verrou.html">PREMIUM<a>
   <a href="propos.html">À PROPOS</a>
   <a href="contact.html">CONTACT</a>
   <a href="confi.html">CONFIDENTIALITÉ</a>
