--- a/premium/verrou.html
+++ b/premium/verrou.html
@@ -134,7 +134,7 @@
       const val = document.getElementById("code").value.trim();
       if (val === CODE) {
         // Redirection automatique immédiate
-        window.location.href = "premium/premium.html";
+        window.location.href = "premium.html";
       } else {
         document.getElementById("error").style.display = "block";
         document.getElementById("code").value = "";
