--- a/success.html
+++ b/success.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head><meta charset="UTF-8"><title>Merci !</title></head>
-<body style="background:#000;color:gold;text-align:center;padding:5rem;font-family:Arial;">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Code Premium • Megane Learn</title>
+  <style>
+    body{background:#000;color:#fff;font-family:Arial;text-align:center;padding:5rem}
+    h1{font-size:4rem;color:gold;margin:2rem}
+    .code{font-size:5rem;background:#111;padding:2rem;border-radius:25px;margin:4rem auto;max-width:600px;border:5px solid gold;color:#00ff9d}
+    button{background:gold;color:black;padding:1.5rem 4rem;font-size:2rem;border:none;border-radius:60px;margin:2rem;cursor:pointer}
+  </style>
+</head>
+<body>
+
   <h1>Paiement réussi !</h1>
-  <p style="font-size:3rem;margin:3rem 0;">Ton code Premium :</p>
-  <h2 style="font-size:4rem;color:#00ff9d;">MEGANE-PREMIUM2025</h2>
-  <p>Utilise ce code sur la page d'accueil</p>
-  <a href="index.html" style="color:gold;font-size:2rem;margin-top:3rem;display:block;">Retour accueil</a>
+  <p style="font-size:3rem;margin:3rem 0">Voici ton code Premium :</p>
+
+  <div class="code" id="codeDisplay">CHARGEMENT...</div>
+
+  <button onclick="copierCode()">Copier le code</button>
+  <br>
+  <a href="payement.html" style="color:gold;font-size:2.5rem;display:block;margin-top:4rem">
+    ← Coller le code et accéder
+  </a>
+
+  <script>
+    // Génère et sauvegarde le code unique
+    function genererEtSauvegarder() {
+      const prefix = "MEGANE";
+      const random = Math.random().toString(36).substring(2, 8).toUpperCase();
+      const code = `\( {prefix}- \){random}`;
+
+      const codes = JSON.parse(localStorage.getItem("meganeCodes") || "[]");
+      codes.push({ code, expire: Date.now() + (10 * 24 * 60 * 60 * 1000) }); // 10 jours
+      localStorage.setItem("meganeCodes", JSON.stringify(codes));
+
+      return code;
+    }
+
+    function copierCode() {
+      const code = document.getElementById("codeDisplay").textContent;
+      navigator.clipboard.writeText(code);
+      alert("Code copié !");
+    }
+
+    // Affiche le code au chargement
+    window.onload = () => {
+      const code = genererEtSauvegarder();
+      document.getElementById("codeDisplay").textContent = code;
+    };
+  </script>
+
 </body>
-    </html>
+</html>
