--- a/payement.html
+++ b/payement.html
@@ -3,61 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accès Premium • Megane Learn</title>
+  <title>Premium • Megane Learn</title>
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
     body{background:#000;color:#fff;font-family:Arial,sans-serif;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:2rem}
     .card{background:#111;border:5px solid gold;border-radius:35px;padding:4rem 3rem;max-width:520px;width:100%;text-align:center;box-shadow:0 30px 80px rgba(255,215,0,0.4)}
     h1{font-size:3.8rem;background:linear-gradient(90deg,#00f5ff,#40e0d0);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:2rem}
-    .btn{display:block;width:100%;padding:2rem;margin:2rem 0;font-size:2rem;font-weight:bold;border-radius:60px;cursor:pointer;transition:0.4s;text-decoration:none}
+    input{width:100%;padding:1.8rem;font-size:2rem;background:#001f3f;color:white;border:5px solid gold;border-radius:60px;text-align:center;margin:2rem 0}
+    .btn{display:block;width:100%;padding:2rem;margin:2rem 0;font-size:2rem;font-weight:bold;border-radius:60px;cursor:pointer}
     .btn-wave{background:#00f5ff;color:black;border:none}
     .btn-code{background:transparent;color:#88f4ff;border:4px solid #00f5ff}
-    .code-input{width:100%;padding:1.8rem;font-size:2rem;background:#001f3f;color:white;border:5px solid gold;border-radius:60px;text-align:center;margin:2rem 0;letter-spacing:8px}
     .error{color:#ff3366;font-size:1.6rem;margin-top:1rem;display:none}
-    .important{background:#ff336620;padding:1.5rem;border-radius:15px;margin:2rem 0;font-size:1.4rem}
+    .info{font-size:1.8rem;color:#00ff9d;margin:3rem 0}
   </style>
 </head>
 <body>
 
   <div class="card">
     <h1>ACCÈS PREMIUM</h1>
-    <p style="font-size:2.5rem;color:#00ff9d;margin:3rem 0">50 FCFA → Accès illimité 10 jours</p>
+    <p class="info">50 FCFA → Accès illimité 10 jours<br>Tu reçois ton code par SMS</p>
 
-    <!-- PAIEMENT WAVE -->
-    <a href="https://pay.wave.com/m/M_ci_tEommx3CEV8p/c/ci/?amount=5&success_url=https://ivanipote.github.io/PDF-search/success.html" 
-       class="btn btn-wave">
-      Payer 50 FCFA avec Wave
-    </a>
-
-    <div class="important">
-      <strong>⚠️ Important :</strong><br>
-      Après paiement dans l’app Wave, <strong>reviens ici</strong> ou clique sur ce lien :<br>
-      <a href="success.html" style="color:gold;font-weight:bold">→ Recevoir mon code Premium</a>
-    </div>
+    <input type="tel" id="phone" placeholder="+221 77 XXX XX XX" required>
+    <button onclick="initierPaiement()" class="btn btn-wave">
+      Payer 50 FCFA + Recevoir le code par SMS
+    </button>
 
     <p style="margin:4rem 0;font-size:1.8rem;color:#aaa">OU</p>
 
-    <p style="font-size:1.8rem;color:#00f5ff">J’ai déjà un code</p>
-    <input type="text" id="codeInput" class="code-input" placeholder="••••••••" maxlength="12">
+    <input type="text" id="codeInput" placeholder="Entre ton code reçu par SMS" maxlength="12">
     <p id="error" class="error">Code invalide</p>
     <button onclick="verifierCode()" class="btn btn-code">Déverrouiller</button>
   </div>
 
-  <script>
-    const CODES = JSON.parse(localStorage.getItem("meganeCodes") || "[]");
-
-    function verifierCode() {
-      const input = document.getElementById("codeInput").value.trim().value.trim().toUpperCase();
-      const now = Date.now();
-      const valide = CODES.find(c => c.code === input && now < c.expire);
-
-      if (valide) {
-        window.location.href = "premium.html";
-      } else {
-        document.getElementById("error").style.display = "block";
-      }
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
