--- a/payement.html
+++ b/payement.html
@@ -35,6 +35,6 @@
     <button onclick="verifierCode()" class="btn btn-code">Déverrouiller</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="pay.js"></script>
 </body>
 </html>
