--- a/payement.html
+++ b/payement.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Premium • Megane Learn</title>
+  <title>Accès Premium • Megane Learn</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
     body{background:#000;color:#fff;font-family:Arial,sans-serif;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:2rem}
-    .card{background:#111;border:5px solid gold;border-radius:35px;padding:4rem 3rem;max-width:520px;width:100%;text-align:center;box-shadow:0 30px 80px rgba(255,215,0,0.4)}
+    .card{background:#111;border:5px solid gold;border-radius:35px;padding:4rem 3rem;max-width:520px;width:width:100%;text-align:center;box-shadow:0 30px 80px rgba(255,215,0,0.4)}
     h1{font-size:3.8rem;background:linear-gradient(90deg,#00f5ff,#40e0d0);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:2rem}
-    input{width:100%;padding:1.8rem;font-size:2rem;background:#001f3f;color:white;border:5px solid gold;border-radius:60px;text-align:center;margin:2rem 0}
-    .btn{display:block;width:100%;padding:2rem;margin:2rem 0;font-size:2rem;font-weight:bold;border-radius:60px;cursor:pointer}
+    input{width:100%;padding:1.8rem;font-size:2rem;background:#001f3f;color:white;border:5px solid gold;border-radius:60px;text-align:center;margin:2rem 0;letter-spacing:8px}
+    .btn{display:block;width:100%;padding:2rem;margin:2rem 0;font-size:2rem;font-weight:bold;border-radius:60px;cursor:pointer;transition:0.4s}
     .btn-wave{background:#00f5ff;color:black;border:none}
     .btn-code{background:transparent;color:#88f4ff;border:4px solid #00f5ff}
+    .info{font-size:1.8rem;color:#00ff9d;margin:2rem 0}
     .error{color:#ff3366;font-size:1.6rem;margin-top:1rem;display:none}
-    .info{font-size:1.8rem;color:#00ff9d;margin:3rem 0}
   </style>
 </head>
 <body>
@@ -24,17 +25,56 @@
     <p class="info">50 FCFA → Accès illimité 10 jours<br>Tu reçois ton code par SMS</p>
 
     <input type="tel" id="phone" placeholder="+221 77 XXX XX XX" required>
-    <button onclick="initierPaiement()" class="btn btn-wave">
-      Payer 50 FCFA + Recevoir le code par SMS
+    <button onclick="lancerPaiement()" class="btn btn-wave">
+      Payer 50 FCFA avec Wave
     </button>
 
     <p style="margin:4rem 0;font-size:1.8rem;color:#aaa">OU</p>
 
-    <input type="text" id="codeInput" placeholder="Entre ton code reçu par SMS" maxlength="12">
+    <input type="text" id="codeInput" placeholder="Entre ton code ici" maxlength="12">
     <p id="error" class="error">Code invalide</p>
     <button onclick="verifierCode()" class="btn btn-code">Déverrouiller</button>
   </div>
 
-  <script src="pay.js"></script>
+  <script>
+    const CODES = JSON.parse(localStorage.getItem("meganeCodes") || "[]");
+
+    async function lancerPaiement() {
+      const phone = document.getElementById("phone").value.trim();
+      if (!phone || phone.length < 10) return alert("Numéro invalide");
+
+      // Génère le code
+      const code = "MEGANE-" + Math.random().toString(36).substring(2,8).toUpperCase();
+
+      // Sauvegarde localement
+      CODES.push({ code, expire: Date.now() + (10*24*60*60*1000) });
+      localStorage.setItem("meganeCodes", JSON.stringify(CODES));
+
+      // Envoie le SMS via ton Vercel
+      await fetch("https://pdf-search.vercel.app/api/send-sms", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ phone, code })
+      });
+
+      alert(`Paiement lancé !\nTu recevras ton code par SMS en 5 secondes\nCode temporaire : ${code}`);
+
+      // Ouvre Wave
+      window.open("https://pay.wave.com/m/M_ci_tEommx3CEV8p/c/ci/?amount=5000", "_blank");
+    }
+
+    function verifierCode() {
+      const input = document.getElementById("codeInput").value.trim().toUpperCase();
+      const now = Date.now();
+      const valide = CODES.find(c => c.code === input && now < c.expire);
+
+      if (valide) {
+        window.location.href = "premium.html";
+      } else {
+        document.getElementById("error").style.display = "block";
+      }
+    }
+  </script>
+
 </body>
 </html>
